artefactId_lab/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: books-app
  name: app-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
  selector:
    matchLabels:
      app: app-deployment
  template:
    metadata:
      labels:
        app: app-deployment
    spec:
      containers:
        - name: spring-app
          image: mahmud740/spapp:2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
