artefactId_lab/kubernetes/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-db
  namespace: books-app
spec:
  selector:
    matchLabels:
      app: statefulset-db
  serviceName: servicedb
  #replicas: 3
  replicas: 1
  template:
    metadata:
      labels:
        app: statefulset-db
    spec:
      containers:
        - name: db-postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-volume
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: db-pvc

#
#apiVersion: apps/v1
#kind: StatefulSet
#metadata:
#  name: statefullset-db
#  namespace: books-app
#spec:
#  selector:
#    matchLabels:
#      app: statefullset-db
#  serviceName: servicedb
#  replicas: 1
#  template:
#    metadata:
#      labels:
#        app: statefullset-db
#    spec:
#      containers:
#        - name: db-postgres
#          image: postgres:15
#          ports:
#            - containerPort: 5432
#          env:
#            - name: POSTGRES_USER
#              valueFrom:
#                secretKeyRef:
#                  name: app-secrets
#                  key: username
#            - name: POSTGRES_PASSWORD
#              valueFrom:
#                secretKeyRef:
#                  name: app-secrets
#                  key: password
#            - name: POSTGRES_DB
#              valueFrom:
#                configMapKeyRef:
#                  name: app-configmap
#                  key: DATABASE_NAME
#          volumeMounts:
#            - name: postgres-data
#              mountPath: /var/lib/postgresql/data
#  volumeClaimTemplates:
#    - metadata:
#        name: postgres-data
#      spec:
#        accessModes: [ "ReadWriteOnce" ]
#        resources:
#          requests:
#            storage: 1Gi
#        storageClassName: hostpath
