artefactId_lab/kubernetes/serviceapp.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: books-app
spec:
  selector:
    app: app-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  #type: ClusterIP
