artefactId_lab/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingres-app
  namespace: books-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #kubernetes.io/ingress.class: "traefik"
    #traefik.ingress.kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: nginx
  #ingressClassName: traefik
  rules:
    - host: books-kii-maki.com
      http:
        paths:
          - backend:
              service:
                name: app-service
                port:
                  number: 8080
            pathType: Prefix
            #pathType: ImplementationSpecific
            path: /
            #path: "/books(/|$)(.*)"
